--- a/projects.json
+++ b/projects.json
@@ -11,7 +11,7 @@
   },
   {
     "title": "NaturalSMP",
-    "image": "https://placehold.co/600x350/1e293b/3b82f6?text=Discord+Bot",
+    "image": "https://placehold.co/600x350/1e293b/3b82f6?text=Natural+SMP",
     "description": "-",
     "tags": ["Minecraft", "Public", "Multiplayer"],
     "link_published": "#",
